--- a/media/css/firefox/new/common.less
+++ b/media/css/firefox/new/common.less
@@ -87,31 +87,4 @@ html[lang|="en"] #main-headline span:first-child {
         .font-size(36px);
         letter-spacing: -1px;
     }
-
-    #colophon {
-        .primary,
-        .fx-footer-links {
-            text-align: left;
-
-            li {
-                display: block;
-                margin-left: 0;
-
-                a, a:link, a:visited {
-                    display: block;
-                    border-left: none;
-                    border-top: 1px dotted @textColorLight;
-                    padding: 10px;
-                }
-
-                &:first-child a {
-                    border: 0;
-                }
-            }
-        }
-
-        .fx-footer-links {
-            border-top: 1px dotted @textColorLight;
-        }
-    }
 }
